--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
   "license": "BSD",
   "dependencies": {
     "grunt": "~0.4.2",
-    "grunt-contrib-coffee": "~0.7.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-newer": "~0.6.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.7"
+    "grunt-urequire": "~0.6.0",
+    "grunt-contrib-watch": "~0.5.3"
   }
 }
